--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@prisma/client": "6.7.0",
     "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.6.1",
+    "express": "^5.1.0",
     "nodemailer": "^7.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
